# Sparks

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
code/: CMakeLists.txt
code/sparks/: CMakeLists.txt
code/sparks/app/: CMakeLists.txt  app.cpp  app.h  app_gui_renderer.cpp  app_gui_renderer.h  app_settings.cpp  app_settings.h  app_utils.cpp  app_utils.h  built_in_scene.h  built_in_scenes.cpp  built_in_scenes.h  camera_controller.cpp  camera_controller.h
code/sparks/asset_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  asset_manager_utils.cpp  asset_manager_utils.h  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
code/sparks/assets/: CMakeLists.txt  assets.cpp  assets.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertex.cpp  vertex.h
code/sparks/main/: CMakeLists.txt  main.cpp
code/sparks/renderer/: CMakeLists.txt  film.cpp  film.h  raytracing_film.cpp  raytracing_film.h  renderer.cpp  renderer.h  renderer_utils.h
code/sparks/renderer/shaders/: bsdf.glsl  constants.glsl  direct_lighting.glsl  entity_direct_lighting.glsl  entity_metadata.glsl  entity_pass.frag  entity_pass.vert  envmap.glsl  envmap_direct_lighting.glsl  envmap_pass.frag  envmap_pass.vert  hit_record.glsl  material.glsl  principled_bsdf.glsl  random.glsl  raytracing.rchit  raytracing.rgen  raytracing.rmiss  renderer.frag  renderer.vert  scene_settings.glsl  vertex.glsl
code/sparks/scene/: camera.cpp  camera.h  entity.cpp  entity.h  envmap.cpp  envmap.h  material.cpp  material.h  scene.cpp  scene.h  scene_settings.h  scene_utils.cpp  scene_utils.h
code/sparks/utils/: CMakeLists.txt  common.cpp  common.h  file_probe.cpp  file_probe.h  hyper_params.h  utils.h
docs/: definition.md  framework.md  getting_started.md
